--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ p {
 
 header {
     padding: 20px;
+    background-color: #EEE;
 }
 
 .header-center {
@@ -54,7 +55,7 @@ header {
 }
 
 .header-nav li {
-    margin-right: 30px; /* Adjust the margin-right to add more space between nav items */
+    margin-right: 30px;
 }
 
 .header-nav a {
@@ -82,8 +83,8 @@ header {
 /* Download App Section */
 
 .download-app {
+    background-color: #EEE;
     text-align: center;
-    padding: 40px;
 }
 
 /* App Buttons */
@@ -91,16 +92,16 @@ header {
 .app-buttons {
     display: flex;
     justify-content: center;
-    margin-top: 3.38rem; /* Adjust the margin-top for a bigger gap */
+    margin-top: 3.38rem;
 }
 
 .app-buttons a {
     display: inline-block;
-    margin: 0 10px; /* Adjust the margin for spacing between buttons */
+    margin: 0 10px;
 }
 
 .app-buttons img {
-    width: 150px; /* Set the desired width for the buttons */
+    width: 150px;
     height: auto;
 }
 
@@ -108,7 +109,7 @@ header {
 
 .phone-image {
     text-align: center;
-    margin-top: 3.38rem;
+    margin-top: 2.56rem;
     opacity: 0; /* Set opacity to 0 so it will be set to 1 in animation */
     animation: slideUp 2s ease-out forwards;
 }
@@ -131,34 +132,34 @@ header {
 /* Main Section */
 
 .main {
-    text-align: center; /* Center-align the content */
+    text-align: center;
     padding: 20px;
 }
 
 .main h2 {
-    font-size: 3.3125rem;
+    font-size: 53px;
     font-weight: 700;
-    margin-bottom: 20px; /* Add some space below the heading */
+    margin-bottom: 20px;
 }
 
 .product-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 0px;
     justify-content: center;
     align-items: center;
+    gap: 30px;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .product-item {
+    background-color: #EBEBEB;
     display: flex;
-    background-color: #ff0000;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 10px;
-    width: 16.375rem;
-    height: 23.9375rem;
-    margin: auto;
+    width: 100%;
+    height: 383px;
 }
 
 .product-item img {
